fixed z-index for hamburger menu

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -95,6 +95,7 @@ header {
     position: absolute;
     width: 100%;
     opacity: 0.9;
+    z-index: 2;
 
     li {
         padding: 10px;
