--- a/styles/style.css
+++ b/styles/style.css
@@ -376,6 +376,7 @@ header {
   position: absolute;
   width: 100%;
   opacity: 0.9;
+  z-index: 2;
 }
 
 .navMobile li {
